Edited timeline and events

--- a/index.html
+++ b/index.html
@@ -120,19 +120,17 @@
             heart, we always tend to look forward to what is yet to come with
             infinite dreams and aspirations along with a ray of hope to go
             beyond the "zenith" of the knowns and unknowns and discover new
-            forms with our creative  and curious minds.With this hope and motto in our thoughts, 
-            IEEE Student Branch JIIT <span id="toggle-abt" hidden>is thrilled to announce the second online edition of our
+            forms with our creative and curious minds.With this hope and motto in our thoughts,
+            IEEE Student Branch JIIT <span id="toggle-abt" hidden>is thrilled to announce the second online edition of
+              our
               most anticipated and largely awaited two days annual fest ~
               "XENITH-22" , with the theme being "Beyond The Apex", where we
               explore the young minds and promote them to think beyond the
               reasonable.
             </span>
             <span data-uk-toggle="{target:'.my-class'}"
-              uk-toggle="target: #toggle-abt; animation: uk-animation-slide-top" 
-              class="toggle-text more self"
-              id="readtoggle"
-              onclick="toggleAbout()"
-              >
+              uk-toggle="target: #toggle-abt; animation: uk-animation-slide-top" class="toggle-text more self"
+              id="readtoggle" onclick="toggleAbout()">
               ..read more
             </span>
           </p>
@@ -150,17 +148,119 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front glowing">
-              <img src="./static/img/events/metaverse.png" alt="">
+              <img src="./static/img/events/metaverse.png" alt="Metaverse">
             </div>
             <div class="flip-card-back">
               <h1>METAVERSE</h1>
-              <p class="uk-text-justify uk-text-small section-text">Collaborate intensively with one another in groups to create new software or service, which can help solve problems of any complexity</p>
-              <a  class="neon-btn" href="https://metaverse-xenith22.tech/">
+              <p class="uk-text-justify uk-text-small section-text">Collaborate intensively with one another in groups
+                to create new software or service, which can help solve problems of any complexity</p>
+              <a class="neon-btn" href="https://metaverse-xenith22.tech/" target="_blank">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
                 METAVERSE
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front glowing">
+              <div class="flip-card-front-text">
+                <img src="./static/img/events/denseEclipseResize.jpg" alt="Dense Eclipse">
+              </div>
+            </div>
+            <div class="flip-card-back">
+              <h1>Dense Eclipse</h1>
+              <p class="uk-text-justify uk-text-small section-text">"The sky is not the limit.
+                Beyond the universe is."
+                <br>
+                -Suzy Kassem. 
+                <br>
+                Do you have what it takes to navigate through the darkness as coding questions are bombarded to reach the bright side? If yes, then we have some exciting news for you!
+                <br>
+                Buckle your seatbelts, Fire your laptops and put your minds to use as IEEE SB JIIT brings to you our Xenith'22 coding event.
+                <br><br>
+                Date:26th February
+                <br>
+                Time:8-10 p.m.</p>
+              <a class="neon-btn" href="https://bit.ly/3Bxc17z" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                REGISTER HERE
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front glowing">
+              <div class="flip-card-front-text">
+                <img src="./static/img/events/spiralForgeResize.jpg" alt="Spiral Forge">
+              </div>
+            </div>
+            <div class="flip-card-back">
+              <h1>SPIRAL FORGE</h1>
+              <p class="uk-text-justify uk-text-small section-text">
+                "Iron is full of impurities that weaken it; through forging, it becomes steel and is transformed into
+                razor-sharped swords. Human beings develop in the same fashion."-Morihei Ueshiba
+                <br>
+                Bored of coding contests where seniors always outperform the freshers? Lack of dsa knowledge always
+                ranking you low. A contest that ground for everyone, where your puzzle and problem solving values more
+                than your DSA knowledge!
+                <br>
+                If you have enough vigor to face the heat of mind-boggling questions then grab a seat as IEEE SB JIIT
+                presents to you an exhilarating aptitude-based coding event- Spiral forge, where the test cases are out
+                in open just waiting to be cracked by you!
+                <br>
+                <br>
+                Date:February 27th 2022
+                <br>
+                Time: 8p.m.-10p.m.
+                <br><br>
+                Put your logical and analytical skills to the test and see if you turn out to be better than the rest,
+                for there is a chance to win prizes worth 25k! 🔥
+              </p>
+              <a class="neon-btn" href="https://bit.ly/3HfJioW" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                REGISTER NOW
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front glowing">
+              <div class="flip-card-front-text">
+                <span>
+                  <img src="./static/img/events/techTalkResize.jpg" alt="Tech Talk">
+                </span>
+              </div>
+            </div>
+            <div class="flip-card-back">
+              <h1>TECH TALK</h1>
+              <p class="uk-text-justify uk-text-small section-text">In order to be irreplaceable, one must always be different
+                <br>
+                This person has taken programming so seriously that it would be unfair for him if we dont  refer him as a lord of coders. 
+                <br>
+                Getting advises from an  experienced and well skilled programmer who
+                previously worked as an engineer at Uber, DirectI and Morgan Stanley and a Founder of InterviewReady is not more than a dream come true . 
+                <br>
+                IEEE SB JIIT is delighted to welcome Gaurav Sen as our guest speaker on our upcoming and most awaited event Xenith'22 . 
+                <br>
+                It is advisable to mark your calendars now for 26th February at 4:30 PM and be ready with all your doubts to be cleared because this is the platform where you all can Cherish your dreams and Follow your passions 💫💫</p>
+              <a class="neon-btn" href="https://bit.ly/3JCtKNC" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                REGISTER HERE
               </a>
             </div>
           </div>
@@ -175,7 +275,8 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
+              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are
+                still working on it.</p>
               <p>Hang on!</p>
             </div>
           </div>
@@ -190,52 +291,8 @@
               </div>
             </div>
             <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
-              <p>Hang on!</p>
-            </div>
-          </div>
-        </div>
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front glowing">
-              <div class="flip-card-front-text">
-                <span>
-                  COMING SOON
-                </span>
-              </div>
-            </div>
-            <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
-              <p>Hang on!</p>
-            </div>
-          </div>
-        </div>
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front glowing">
-              <div class="flip-card-front-text">
-                <span>
-                  COMING SOON
-                </span>
-              </div>
-            </div>
-            <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
-              <p>Hang on!</p>
-            </div>
-          </div>
-        </div>
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front glowing">
-              <div class="flip-card-front-text">
-                <span>
-                  COMING SOON
-                </span>
-              </div>
-            </div>
-            <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are still working on it.</p>
+              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are
+                still working on it.</p>
               <p>Hang on!</p>
             </div>
           </div>
@@ -245,8 +302,8 @@
 
     <!--Event section ends-->
 
-<!-- Countdown section begins -->
-<!--
+    <!-- Countdown section begins -->
+    <!--
 <div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade">
   <div class="uk-position-top-center">
     <div class="uk-tile uk-tile-transparent">
@@ -260,7 +317,7 @@
   </main>
 </div>
 -->
-<!--Countdown section ends-->
+    <!--Countdown section ends-->
 
     <!--Timeline section begins-->
 
@@ -274,6 +331,46 @@
         <div class="timeline ">
           <ul>
             <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    Tech Talk 
+                  </h2>
+                </blockquote>
+                Date - 26<sup>th</sup> Febuary 2022 <br>
+                Time - 4:30 <br>
+                Venue - Youtube @ieeesbjiit
+              </div>
+              </li>
+              <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    Dense Eclipse
+                  </h2>
+                </blockquote>
+                Date - 26<sup>th</sup> Febuary 2022 <br>
+                Time - 8 PM to 10 PM<br>
+              </div>
+              </li>
+              <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    Spiral Forge
+                  </h2>
+                </blockquote>
+                Date - 27<sup>th</sup> Febuary 2022 <br>
+                Time - 8 PM to 10 PM<br>
+              </div>
+              </li>
+              <li>
               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
                 <span class="mask bg-gradient-default opacity-7"></span>
 
@@ -301,75 +398,78 @@
             <span class="sectionHead">gallery</span>
           </div>
         </div>
-        <br/><br/><br/><br/>
-   
-        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1" uk-slider="center: true; autoplay: true; autoplay-interval: 2000; finite: true ">
+        <br /><br /><br /><br />
+
+        <div class="uk-position-relative uk-visible-toggle uk-light" tabindex="-1"
+          uk-slider="center: true; autoplay: true; autoplay-interval: 2000; finite: true ">
 
           <ul class="uk-slider-items uk-grid">
-              <li class="uk-width-1-3">
-                  <div class="uk-panel">
-                      <img src="./static/img/gallery/img5.jpeg" class="img-gal" alt="">
-                  </div>
-              </li>
-              <li class="uk-width-1-3">
-                <div class="uk-panel">
-                    <img src="./static/img/gallery/img6.jpeg" class="img-gal" alt="">
-                </div>
-              </li>
-              <li class="uk-width-1-3">
-                  <div class="uk-panel">
-                      <img src="./static/img/gallery/img4.jpeg"  class="img-gal" alt="">
-                  </div>
-              </li>
-              <li class="uk-width-1-3">
-                  <div class="uk-panel">
-                      <img src="./static/img/gallery/img3.jpeg" class="img-gal" alt="">
-                  </div>
-              </li>
-              <li class="uk-width-1-3">
-                  <div class="uk-panel">
-                      <img src="./static/img/gallery/img2.jpeg" class="img-gal" alt="">
-                  </div>
-              </li>
-              <li class="uk-width-1-3">
-                  <div class="uk-panel">
-                      <img src="./static/img/gallery/img1.jpeg" class="img-gal" alt="">
-                  </div>
-              </li>
-              <li class="uk-width-1-3">
-                <div class="uk-panel">
-                    <img src="./static/img/gallery/img5.jpeg" class="img-gal" alt="">
-                </div>
-              </li>
-              <li class="uk-width-1-3">
-                <div class="uk-panel">
-                    <img src="./static/img/gallery/img6.jpeg" class="img-gal" alt="">
-                </div>
-              </li>
-              <li class="uk-width-1-3">
-                <div class="uk-panel">
-                    <img src="./static/img/gallery/img4.jpeg"  class="img-gal" alt="">
-                </div>
-            </li>
-              <li class="uk-width-1-3">
-                <div class="uk-panel">
-                    <img src="./static/img/gallery/img3.jpeg" class="img-gal" alt="">
-                </div>
-              </li>
             <li class="uk-width-1-3">
-                <div class="uk-panel">
-                  <img src="./static/img/gallery/img2.jpeg" class="img-gal" alt="">
-                </div>
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img5.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img6.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img4.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img3.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img2.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img1.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img5.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img6.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img4.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img3.jpeg" class="img-gal" alt="">
+              </div>
+            </li>
+            <li class="uk-width-1-3">
+              <div class="uk-panel">
+                <img src="./static/img/gallery/img2.jpeg" class="img-gal" alt="">
+              </div>
             </li>
           </ul>
-          <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous uk-slider-item="previous"></a>
-          <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next uk-slider-item="next"></a>
-  
-      </div>
+          <a class="uk-position-center-left uk-position-small uk-hidden-hover" href="#" uk-slidenav-previous
+            uk-slider-item="previous"></a>
+          <a class="uk-position-center-right uk-position-small uk-hidden-hover" href="#" uk-slidenav-next
+            uk-slider-item="next"></a>
+
+        </div>
 
       </div>
     </div>
-   <!--gallery ends-->
+    <!--gallery ends-->
 
 
     <!--Team section begins-->
@@ -379,7 +479,7 @@
           <span class="sectionHead">Organising team</span>
         </div>
       </div>
-      <br/><br/><br/><br/>
+      <br /><br /><br /><br />
       <main style="margin-bottom:20vh ;">
 
         <div class="col-md-4">
@@ -611,8 +711,8 @@
         </div>
       </div>
 
-      
-    
+
+
 
       <div class="footer-right">
         <p class="footer-company-about">
