--- a/index.html
+++ b/index.html
@@ -245,23 +245,22 @@
             </div>
             <div class="flip-card-back">
               <h1>TECH TALK</h1>
-              <p class="uk-text-justify uk-text-small section-text">In order to be irreplaceable, one must always be different
+              <p class="uk-text-justify uk-text-small section-text">
+                “As engineers, we are going to be in a position to change the world, not just study it.”-Henry Petroski
                 <br>
-                This person has taken programming so seriously that it would be unfair for him if we dont  refer him as a lord of coders. 
+                She is well known for her youtube channel @ForMyScholars. Apart from this, she is a mentor, a plus educator at unacademy, a Corporate Trainer with UR Services Pvt. and was also a former Assistant Professor at IMS Engg. College, Ghaziabad.
                 <br>
-                Getting advises from an  experienced and well skilled programmer who
-                previously worked as an engineer at Uber, DirectI and Morgan Stanley and a Founder of InterviewReady is not more than a dream come true . 
+                Date: 27th February, 2022 <br>
+                Time: 3 p.m.-4 p.m.
                 <br>
-                IEEE SB JIIT is delighted to welcome Gaurav Sen as our guest speaker on our upcoming and most awaited event Xenith'22 . 
-                <br>
-                It is advisable to mark your calendars now for 26th February at 4:30 PM and be ready with all your doubts to be cleared because this is the platform where you all can Cherish your dreams and Follow your passions 💫💫</p>
-              <a class="neon-btn" href="https://bit.ly/3JCtKNC" target="_blank">
+              </p>
+                <a class="neon-btn" href="https://bit.ly/3JCtKNC" target="_blank">
                 <span></span>
                 <span></span>
                 <span></span>
                 <span></span>
-                REGISTER HERE
-              </a>
+                  REGISTER HERE
+                </a>
             </div>
           </div>
         </div>
@@ -270,30 +269,60 @@
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  COMING SOON
+                  <img src="./static/img/events/tch3.png" alt="Wire Trap">
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are
-                still working on it.</p>
-              <p>Hang on!</p>
+              <h1>TECH TALK</h1>
+              <p class="uk-text-justify uk-text-small section-text">
+                “As engineers, we are going to be in a position to change the world, not just study it.”-Henry Petroski
+                <br>
+                IEEE SB JIIT invites all budding engineers to yet another enthralling tech talk event under Xenith’22 by Ms. Deepali Agarwal!<br>
+                She is well known for her youtube channel @ForMyScholars. Apart from this, she is a mentor, a plus educator at unacademy, a Corporate Trainer with UR Services Pvt. and was also a former Assistant Professor at IMS Engg. College, Ghaziabad.
+                <br>
+                IEEE SB JIIT now announces its last event for Xenith'22-"Wire Trap", a competition based on aptitude about electronics and bifurcated into 3 rounds, to provide you an opportunity to stand out in your own area of expertise. <br>
+                Date: 27th February, 2022<br> Time: 3 p.m.-4 p.m.<br>
+                <br>
+              </p>
+                <a class="neon-btn" href="https://bit.ly/3JCtKNC" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                  REGISTER HERE
+                </a>
             </div>
           </div>
         </div>
+
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  COMING SOON
+                  <img src="./static/img/events/wire.png" alt="Tech Talk">
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are
-                still working on it.</p>
-              <p>Hang on!</p>
+              <h1>WIRE TRAP</h1>
+              <p class="uk-text-justify uk-text-small section-text">
+                "Trapped in a vase, Felt like a cage, Yet embracing the girth of the wire like a sage."
+                <br>
+                Felt the need to enhance and show your knowledge related to the electronics around? Well, we are here with yet another event for you, but this time it's about connections and communication, where you can design the logical circuits of your brain and make that switch on without going through any programming procedure!!
+                <br>
+                IEEE SB JIIT now announces its last event for Xenith'22-"Wire Trap", a competition based on aptitude about electronics and bifurcated into 3 rounds, to provide you an opportunity to stand out in your own area of expertise. <br>
+                Date: 27th February, 2022<br> Time: 11-2 pm<br>
+                <br>
+              </p>
+                <a class="neon-btn" href="https://bit.ly/3Hchula" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                  REGISTER HERE
+                </a>
             </div>
           </div>
         </div>
@@ -303,20 +332,7 @@
     <!--Event section ends-->
 
     <!-- Countdown section begins -->
-    <!--
-<div class="uk-position-relative" id="sponsors" uk-scrollspy="cls:uk-animation-fade">
-  <div class="uk-position-top-center">
-    <div class="uk-tile uk-tile-transparent">
-      <h1 class="sectionHead" data-text="Journey Begins">Journey begins</h1>
-    </div>
-  </div>
-  <br /><br />
-  <main id="countdownContainer">
-    <div class="widget-wrap">
-      <div id="demo"></div>
-  </main>
-</div>
--->
+
     <!--Countdown section ends-->
 
     <!--Timeline section begins-->
@@ -371,17 +387,6 @@
               </div>
               </li>
               <li>
-              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-                <span class="mask bg-gradient-default opacity-7"></span>
-
-                <blockquote class="card-blockquote">
-                  <h2 class="font-weight-bold text-white border-bottom">
-                    LIVE SOOON
-                  </h2>
-                </blockquote>
-                Timelines are usually declared when event is on the apex. We will launch it soon!
-                Thank you for your patience.
-              </div>
             </li>
           </ul>
         </div>
