--- a/index.html
+++ b/index.html
@@ -336,11 +336,11 @@
 
                 <blockquote class="card-blockquote">
                   <h2 class="font-weight-bold text-white border-bottom">
-                    Tech Talk 
+                    Opening Ceremony
                   </h2>
                 </blockquote>
                 Date - 26<sup>th</sup> Febuary 2022 <br>
-                Time - 4:30 <br>
+                Time - 4:30 to 4:45 PM<br>
                 Venue - Youtube @ieeesbjiit
               </div>
               </li>
@@ -350,14 +350,65 @@
 
                 <blockquote class="card-blockquote">
                   <h2 class="font-weight-bold text-white border-bottom">
+                    Tech Talk - 1
+                  </h2>
+                </blockquote>
+                Date - 26<sup>th</sup> Febuary 2022 <br>
+                Time - 4:45 PM<br>
+              </div>
+              </li>
+              <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    Tech Talk - 2
+                  </h2>
+                </blockquote>
+                Date - 27<sup>th</sup> Febuary 2022 <br>
+                Time - 3:00 PM<br>
+              </div>
+              </li>
+              <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    Metaverse
+                  </h2>
+                </blockquote>
+                Date - 26<sup>th</sup> &amp; 27<sup>th</sup> Febuary 2022 <br>
+                Time - 6:00 PM to 8:00 PM<br>
+              </div>
+            </li>
+            <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
                     Dense Eclipse
                   </h2>
                 </blockquote>
                 Date - 26<sup>th</sup> Febuary 2022 <br>
-                Time - 8 PM to 10 PM<br>
+                Time - 6:00 PM to 8:00 PM<br>
               </div>
-              </li>
-              <li>
+            </li>
+            <li>
+              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
+                <span class="mask bg-gradient-default opacity-7"></span>
+
+                <blockquote class="card-blockquote">
+                  <h2 class="font-weight-bold text-white border-bottom">
+                    Wiretap
+                  </h2>
+                </blockquote>
+                Date - 27<sup>th</sup> Febuary 2022 <br>
+                Time - 11:00 AM to 2:00 PM<br>
+              </div>
+            </li>
+            <li>
               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
                 <span class="mask bg-gradient-default opacity-7"></span>
 
@@ -367,20 +418,7 @@
                   </h2>
                 </blockquote>
                 Date - 27<sup>th</sup> Febuary 2022 <br>
-                Time - 8 PM to 10 PM<br>
-              </div>
-              </li>
-              <li>
-              <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
-                <span class="mask bg-gradient-default opacity-7"></span>
-
-                <blockquote class="card-blockquote">
-                  <h2 class="font-weight-bold text-white border-bottom">
-                    LIVE SOOON
-                  </h2>
-                </blockquote>
-                Timelines are usually declared when event is on the apex. We will launch it soon!
-                Thank you for your patience.
+                Time - 8:00 PM to 10:00 PM<br>
               </div>
             </li>
           </ul>
