--- a/index.html
+++ b/index.html
@@ -176,11 +176,13 @@
               <p class="uk-text-justify uk-text-small section-text">"The sky is not the limit.
                 Beyond the universe is."
                 <br>
-                -Suzy Kassem. 
+                -Suzy Kassem.
                 <br>
-                Do you have what it takes to navigate through the darkness as coding questions are bombarded to reach the bright side? If yes, then we have some exciting news for you!
+                Do you have what it takes to navigate through the darkness as coding questions are bombarded to reach
+                the bright side? If yes, then we have some exciting news for you!
                 <br>
-                Buckle your seatbelts, Fire your laptops and put your minds to use as IEEE SB JIIT brings to you our Xenith'22 coding event.
+                Buckle your seatbelts, Fire your laptops and put your minds to use as IEEE SB JIIT brings to you our
+                Xenith'22 coding event.
                 <br><br>
                 Date:26th February
                 <br>
@@ -245,16 +247,22 @@
             </div>
             <div class="flip-card-back">
               <h1>TECH TALK</h1>
-              <p class="uk-text-justify uk-text-small section-text">In order to be irreplaceable, one must always be different
+              <p class="uk-text-justify uk-text-small section-text">In order to be irreplaceable, one must always be
+                different
                 <br>
-                This person has taken programming so seriously that it would be unfair for him if we dont  refer him as a lord of coders. 
+                This person has taken programming so seriously that it would be unfair for him if we dont refer him as a
+                lord of coders.
                 <br>
-                Getting advises from an  experienced and well skilled programmer who
-                previously worked as an engineer at Uber, DirectI and Morgan Stanley and a Founder of InterviewReady is not more than a dream come true . 
+                Getting advises from an experienced and well skilled programmer who
+                previously worked as an engineer at Uber, DirectI and Morgan Stanley and a Founder of InterviewReady is
+                not more than a dream come true .
                 <br>
-                IEEE SB JIIT is delighted to welcome Gaurav Sen as our guest speaker on our upcoming and most awaited event Xenith'22 . 
+                IEEE SB JIIT is delighted to welcome Gaurav Sen as our guest speaker on our upcoming and most awaited
+                event Xenith'22 .
                 <br>
-                It is advisable to mark your calendars now for 26th February at 4:30 PM and be ready with all your doubts to be cleared because this is the platform where you all can Cherish your dreams and Follow your passions 💫💫</p>
+                It is advisable to mark your calendars now for 26th February at 4:30 PM and be ready with all your
+                doubts to be cleared because this is the platform where you all can Cherish your dreams and Follow your
+                passions 💫💫</p>
               <a class="neon-btn" href="https://bit.ly/3JCtKNC" target="_blank">
                 <span></span>
                 <span></span>
@@ -270,14 +278,38 @@
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  COMING SOON
+                  <img src="./static/img/events/techTalk2Resize.jpeg" alt="Tech Talk 2">
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are
-                still working on it.</p>
-              <p>Hang on!</p>
+              <h1>TECH TALK</h1>
+              <p class="uk-text-justify uk-text-small section-text">
+                “As engineers, we are going to be in a position to change the world, not just study it.”
+                -Henry Petroski
+                <br>
+                IEEE SB JIIT invites all budding engineers to yet another enthralling tech talk event under Xenith’22 by
+                Ms. Deepali Agarwal!
+                <br>
+                She is well known for her youtube channel @ForMyScholars. Apart from this, she is a mentor, a plus
+                educator at unacademy, a Corporate Trainer with UR Services Pvt. and was also a former Assistant
+                Professor at IMS Engg. College, Ghaziabad.
+                <br><br>
+                Date: 27th February, 2022
+                <br>
+                Time: 3 p.m.-4 p.m.
+                <br><br>
+                Don’t let this magnificent opportunity of interacting with such a talented and hardworking mind slip by!
+                <br>
+                Register now!
+              </p>
+              <a class="neon-btn" href="https://bit.ly/3h6YIRY" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                REGISTER HERE
+              </a>
             </div>
           </div>
         </div>
@@ -286,14 +318,38 @@
             <div class="flip-card-front glowing">
               <div class="flip-card-front-text">
                 <span>
-                  COMING SOON
+                  <img src="./static/img/events/wireTrapResize.jpeg" alt="Wire Trap">
                 </span>
               </div>
             </div>
             <div class="flip-card-back">
-              <p class="uk-text-justify uk-text-small section-text">We know you have waited long enough, but we are
-                still working on it.</p>
-              <p>Hang on!</p>
+              <h1>WIRE TRAP</h1>
+              <p class="uk-text-justify uk-text-small section-text">
+                "Trapped in a vase, Felt like a cage, Yet embracing the girth of the wire like a sage."
+                <br>
+                Felt the need to enhance and show your knowledge related to the electronics around? Well, we are here
+                with yet another event for you, but this time it's about connections and communication, where you can
+                design the logical circuits of your brain and make that switch on without going through any programming
+                procedure!!
+                <br>
+                IEEE SB JIIT now announces its last event for Xenith'22-"Wire Trap", a competition based on aptitude
+                about electronics and bifurcated into 3 rounds, to provide you an opportunity to stand out in your own
+                area of expertise.
+                <br><br>
+                Date: 27th February, 2022
+                <br>
+                Time: 11-2 pm
+                <br><br>
+                So, what are you waiting for? Make it a "tautology" and stand a chance to win some exciting cash
+                rewards. Not to forget the special prizes for 1st years and girls! 💫
+              </p>
+              <a class="neon-btn" href="https://bit.ly/3Hchula" target="_blank">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                REGISTER HERE
+              </a>
             </div>
           </div>
         </div>
@@ -336,15 +392,15 @@
 
                 <blockquote class="card-blockquote">
                   <h2 class="font-weight-bold text-white border-bottom">
-                    Tech Talk 
+                    Tech Talk
                   </h2>
                 </blockquote>
                 Date - 26<sup>th</sup> Febuary 2022 <br>
                 Time - 4:30 <br>
                 Venue - Youtube @ieeesbjiit
               </div>
-              </li>
-              <li>
+            </li>
+            <li>
               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
                 <span class="mask bg-gradient-default opacity-7"></span>
 
@@ -356,8 +412,8 @@
                 Date - 26<sup>th</sup> Febuary 2022 <br>
                 Time - 8 PM to 10 PM<br>
               </div>
-              </li>
-              <li>
+            </li>
+            <li>
               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
                 <span class="mask bg-gradient-default opacity-7"></span>
 
@@ -369,8 +425,8 @@
                 Date - 27<sup>th</sup> Febuary 2022 <br>
                 Time - 8 PM to 10 PM<br>
               </div>
-              </li>
-              <li>
+            </li>
+            <li>
               <div class="timeline-card card-lift--hover cover-bg text-center mt-sm">
                 <span class="mask bg-gradient-default opacity-7"></span>
 
